test/corpus/errors.txt
=================================================
Error detected at globally reserved keyword
=================================================

<?php

class
trait Foo {} // trait should be recognized

class Example {
    public function test() {
        'do'
        foreach ($users as $user) {} // should be recognized
    }
}

---

(program
  (php_tag)
  (ERROR)
  (trait_declaration
    (name)
    (declaration_list))
  (comment)
  (class_declaration
    (name)
    (declaration_list
      (method_declaration
        (visibility_modifier)
        (name)
        (formal_parameters)
        (compound_statement
          (ERROR
            (string
              (string_content)))
          (foreach_statement
            (variable_name
              (name))
            (variable_name
              (name))
            (compound_statement))
          (comment))))))

=================================================
Callable remains reserved in global constants
:error
=================================================

<?php
const CALLABLE = 1;

---

(program)

=================================================
Namespace remains reserved in global constants
:error
=================================================

<?php
const NAMESPACE = 1;

---

(program)

=================================================
True remains reserved in global constants
:error
=================================================

<?php
const TRUE = 1;

---

(program)

=================================================
False remains reserved in global constants
:error
=================================================

<?php
const FALSE = 1;

---

(program)
